<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FutboGol</string>
    <string name="action_stop">Stop Music.</string>
    <string name="title_activity_jugades">Jugades</string>
    <string name="title_activity_lliga">Creació de lligues</string>
    <string name="title_activity_jugades_detall">Informació jugada</string>
    <string name="martell">PORTER-DEFENSA\nJugada entre el defensa central i el porter. La pilota agafa una velocitat sorprenent.\nMillor martell, mai fet, a càrreg de JORDI COLL.</string>
    <string name="globus">DEFENSA-PORTER\nJugada que consistèix en aixecar la bola sobre tots els jugadors.\nMillor globus, mai fet, a càrreg de JORDI COLL.</string>
    <string name="canvi231">DAVANTER\nJugada ràpida entre 3 jugadors. El 2 li passa al 3 per, posteriorment, fer el canvi al jugador 1.\nEn JORDI COLL és conegut per aquesta jugada.</string>
    <string name="canvi13">DAVANTER\nJugada ràpida entre el jugador 1 i el 3. L\'1 li passa al 3, i aquest remata; o viceversa.\nJORDI COLL és l\'expert.</string>
    <string name="canvi121">DAVANTER\nJugada rapida d\'engany. El jugador 1 li passa al 2 i seguidament altre cop a l\'1 per despistar a la defensa contrincant.\n\nCHUCK NORRIS supera a JORDI COLL.</string>
    <string name="lligapropia">CREAR la LLIGA</string>
    <string name="veurelligues">GESTIONAR LLIGUES (Ja creades)</string>
    <string name="title_activity_gestio_lligues">Llista lligues</string>
    <string name="title_activity_detalls_lliga">Detalls lliga</string>
    <string name="EliminaLliga">Elimina la Lliga</string>
    <string name="classificacio">Mira el campio d\'aquesta lliga!</string>
    <string name="title_activity_array_adapter_lliga">ArrayAdapterLliga</string>
    <string name="title_activity_campio_dam">Campió lliga</string>
    <string name="title_activity_inici">Registra\'t</string>
    <string name="nom">Escriu el teu NOM</string>
    <string name="iniciCognom">Escriu el teu COGNOM</string>
    <string name="iniciCorreu">Escriu el teu CORREU</string>
    <string name="iniciFoto">Fes-te la FOTO</string>
    <string name="title_activity_foto_soci">Carnet FutboSoci</string>
    <string name="fesFoto">Clic!</string>
    <string name="carnettitol">FutboSoci</string>
    <string name="title_activity_menu_inicial_musical">Menu principal</string>
    <string name="jugadesexplicacio">Explicació jugades</string>
    <string name="veurejugades">Visualitza jugades</string>
    <string name="ferquip">Fes el teu equip</string>
    <string name="simulaciogol">Simula un gol</string>
    <string name="title_activity_crear_equip_fotos">Creació equip</string>
    <string name="porter">Fer Foto PORTER</string>
    <string name="defensa">Fer Foto DEFENSA</string>
    <string name="migcamp">Fer Foto MIGCAMPISTA</string>
    <string name="davanter">Fer Foto DAVANTER</string>
    <string name="generarequip">Generar l\'EQUIP</string>
    <string name="title_activity_equip">Equip</string>
    <string name="title_activity_gravacio_gol">Gravacio del gol</string>
    <string name="celebragol">SIMULA LA CELEBRACIÓ DEL TEU GOL!</string>
    <string name="title_activity_jugades_videos">Videos jugades</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
