<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CrearEquipFotos" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/porter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="porter"
            android:text="@string/porter"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/defensa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="defensa"
            android:text="@string/defensa"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/migcamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="migcamp"
            android:text="@string/migcamp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/davanter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="davanter"
            android:text="@string/davanter"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/generarequip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="generarequip"
            android:text="@string/generarequip"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>