<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuInicialMusical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/jugades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="jugades"
            android:text="@string/jugadesexplicacio"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/videojugades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="videojugades"
            android:text="@string/veurejugades"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ferequip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="ferequip"
            android:text="@string/ferquip"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/lligues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="lligues"
            android:text="Lligues de Futbolin"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/simulaciogol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botorodo"
            android:onClick="simulagol"
            android:text="@string/simulaciogol"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>