<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IniciActivity"
    tools:ignore="TextFields" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="top"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvNom"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="#F3F781"
            android:gravity="center"
            android:text="@string/nom"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2E64FE"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/iniciNom"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="top"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCognom"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="#F3F781"
            android:gravity="center"
            android:text="@string/iniciCognom"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2E64FE"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/iniciCognom"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="top"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCorreu"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="#F3F781"
            android:gravity="center"
            android:text="@string/iniciCorreu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2E64FE"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/iniciCorreu"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:inputType="textEmailAddress" >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/botorodo"
            android:onClick="btnFotoClick"
            android:text="@string/iniciFoto"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>